--- a/assets-nsg/css/style.css
+++ b/assets-nsg/css/style.css
@@ -404,7 +404,8 @@ ul {
   font-size: 1em;
   font-weight: 500;
   color: #000000;
-  padding: 0 30px 0 0;
+  padding: 0 15px 0 5px;
+  white-space: nowrap;
 }
 .site-header .navbar .nav-link:hover {
   color: #cc2832;
@@ -1180,3 +1181,4 @@ ul {
   justify-content: center;
   margin-right: 30px;
 }/*# sourceMappingURL=style.css.map */
+
