--- a/assets-nsg/css/style.scss
+++ b/assets-nsg/css/style.scss
@@ -359,7 +359,8 @@ ul {
       font-size: 1em;
       font-weight: 500;
       color: $black;
-      padding: 0 30px 0 0;
+      padding: 0 15px 0 5px;
+      white-space: nowrap;
       &:hover {
         color: $red-light;
       }
