--- a/assets-nsg/css/style.css
+++ b/assets-nsg/css/style.css
@@ -117,6 +117,23 @@ ul {
   }
 }
 
+.heading-black {
+  font-size: 2.25em;
+  font-weight: 600;
+  color: #000000;
+  margin: 0;
+}
+@media (max-width: 1680px) {
+  .heading-black {
+    font-size: 1.625em;
+  }
+}
+@media (max-width: 1440px) {
+  .heading-black {
+    font-size: 1.25em;
+  }
+}
+
 .link-yellow {
   font-size: 1.25em;
   font-weight: 600;
@@ -153,6 +170,68 @@ ul {
   background: #b9b9b9;
   border-radius: 10px;
 }
+.common-card {
+  border: 1px solid #CCCCCC;
+  background: #fff;
+}
+@media (max-width: 991.98px) {
+  .common-card {
+    padding: 20px !important;
+  }
+}
+.common-bg-left {
+  background-image: url("../images/common-bg-left.png");
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+.common-bg-right {
+  background-image: url("../images/common-bg-right.png");
+  background-position: top right;
+  background-repeat: no-repeat;
+  background-size: contain;
+}
+.common-table {
+  border: 1px solid #CCCCCC;
+}
+.common-table thead {
+  background-color: #262626;
+}
+.common-table thead th {
+  font-size: 1em;
+  font-weight: 600 !important;
+  color: #FFFFFF;
+  background: #262626;
+  padding: 15px;
+}
+@media (max-width: 991.98px) {
+  .common-table thead th {
+    font-size: 0.875em;
+  }
+}
+.common-table tbody tr {
+  vertical-align: middle;
+}
+.common-table tbody tr:nth-of-type(odd) > * {
+  --bs-table-color-type: transparent;
+  --bs-table-bg-type: transparent;
+}
+.common-table tbody tr:nth-of-type(even) > * {
+  --bs-table-color-type: var(--bs-table-striped-color);
+  --bs-table-bg-type: var(--bs-table-striped-bg);
+}
+.common-table tbody tr td {
+  font-size: 0.875em;
+  letter-spacing: 0px;
+  color: #2D2D2D;
+  padding: 15px;
+  border: none;
+}
+@media (max-width: 991.98px) {
+  .common-table tbody tr td {
+    font-size: 0.75em;
+  }
+}
 
 .header-top {
   background-color: #f3f3f3;
@@ -163,6 +242,11 @@ ul {
   top: 0;
   z-index: 10000;
 }
+.header-top-left .content {
+  min-height: 26px;
+  display: flex;
+  align-items: center;
+}
 .header-top-left .content .title {
   color: #000000;
   margin: 0;
@@ -172,11 +256,6 @@ ul {
 @media (max-width: 1440px) {
   .header-top-left .content .title {
     font-size: 0.75em;
-  }
-}
-@media (max-width: 1399.98px) {
-  .header-top-left {
-    display: none;
   }
 }
 .header-top-right .content ul {
@@ -207,6 +286,12 @@ ul {
     font-size: 0.75em;
     padding-right: 10px;
     margin-right: 10px;
+  }
+}
+@media (max-width: 1360px) {
+  .header-top-right .content ul li a {
+    padding-right: 5px;
+    margin-right: 5px;
   }
 }
 @media (max-width: 991px) {
@@ -309,7 +394,7 @@ ul {
 }
 @media (max-width: 1440px) {
   .site-header .navbar-brand img {
-    height: 70px;
+    height: 60px;
   }
 }
 @media (max-width: 767px) {
@@ -404,8 +489,7 @@ ul {
   font-size: 1em;
   font-weight: 500;
   color: #000000;
-  padding: 0 15px 0 5px;
-  white-space: nowrap;
+  padding: 0 30px 0 0;
 }
 .site-header .navbar .nav-link:hover {
   color: #cc2832;
@@ -429,6 +513,11 @@ ul {
 .site-header .navbar .btn-red:hover {
   border-color: #000000;
   color: #000000;
+}
+@media (max-width: 1199.98px) {
+  .site-header .navbar .btn-red {
+    margin-top: 15px;
+  }
 }
 
 .news-wrap {
@@ -645,10 +734,7 @@ ul {
 }
 
 .achievement-wrap {
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-image: url("../images/dotted-bg-achievements.png");
+  background-color: #ffffff;
   padding: 5em 0;
 }
 @media (max-width: 991.98px) {
@@ -1092,6 +1178,169 @@ ul {
   height: 70px;
 }
 
+.contact-wrap {
+  background-color: #ECECEC;
+}
+.contact-info {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin-bottom: 30px;
+}
+.contact-info .img-wrap {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border: 1px solid #CC2832;
+  width: 35px;
+  height: 35px;
+  border-radius: 50%;
+  margin-bottom: 15px;
+}
+.contact-info .title {
+  font-size: 1em;
+  letter-spacing: 0px;
+  color: #000000;
+  margin: 0;
+  text-align: center;
+}
+.contact-info .title strong {
+  font-weight: 600;
+}
+@media (max-width: 991.98px) {
+  .contact-info .title {
+    font-size: 0.875em;
+  }
+}
+
+.organization-wrap {
+  background-color: #ECECEC;
+}
+
+.desc-black {
+  font-size: 1em;
+  line-height: 28px;
+  color: #2D2D2D;
+  margin: 15px 0;
+}
+
+.master-gallery-wrap .img-wrap {
+  margin: 10px 0;
+}
+
+.wrapper {
+  background-color: #ECECEC;
+  padding: 70px 0;
+}
+.wrapper .link-wrap {
+  border: 1px solid #CCCCCC;
+  background: #2A2A2A;
+  padding: 15px;
+}
+.wrapper .link-wrap .heading-white {
+  font-size: 1.75em;
+  font-weight: 600;
+  color: #FFFFFF;
+  border-bottom: 1px solid #686868;
+  line-height: 1.5;
+  padding-bottom: 10px;
+}
+.wrapper .link-wrap ul li {
+  background: #3B3B3B;
+  margin-bottom: 5px;
+  display: flex;
+  align-items: center;
+  border-radius: 5px;
+}
+.wrapper .link-wrap ul li a {
+  font-size: 0.875em;
+  color: #FFFFFF;
+  text-decoration: none;
+  display: block;
+  width: 100%;
+  padding: 10px 20px;
+  border-radius: 5px;
+}
+.wrapper .link-wrap ul li a:hover {
+  background: #CC2832;
+}
+.wrapper .link-wrap ul li a img {
+  margin-right: 15px;
+}
+.wrapper .print-btn {
+  box-shadow: 0px 0px 6px rgba(0, 0, 0, 0.1607843137);
+  border-radius: 5px;
+  border: none;
+  background: #fff;
+  padding: 10px 15px;
+  letter-spacing: 0.07px;
+  color: #000000;
+  font-size: 0.875em;
+  font-weight: 600;
+}
+.wrapper .print-btn img {
+  margin-right: 5px;
+}
+.wrapper .search-wrap .form-control {
+  border: 1px solid #AFAFAF;
+  border-radius: 5px;
+  letter-spacing: 0.07px;
+  color: #A5A3A3;
+  font-size: 0.875em;
+}
+.wrapper .search-wrap .form-control:focus {
+  box-shadow: none;
+}
+.wrapper .entries-wrap {
+  letter-spacing: 0.28px;
+  color: #29303B;
+  font-size: 0.875em;
+}
+.wrapper .entries-wrap select {
+  border: 1px solid #B8B8B8;
+  border-radius: 4px;
+  min-width: 60px;
+  height: 30px;
+}
+.wrapper .item-wrap {
+  letter-spacing: 0.28px;
+  color: #29303B;
+  font-size: 0.875em;
+}
+.wrapper .item-wrap select {
+  border: none;
+  border-bottom: 2px solid #000;
+  letter-spacing: 0.07px;
+  color: #000000;
+  font-size: 0.875em;
+  font-weight: 500;
+}
+.wrapper .item-wrap select:focus {
+  box-shadow: none;
+  outline: none;
+}
+.wrapper .link-yellow {
+  text-decoration: underline;
+}
+.wrapper #masterGallerSlider .img-wrap {
+  border: 1px solid #EEEEEE;
+  border-radius: 5px;
+}
+.wrapper #masterGallerSlider .title {
+  font-size: 0.875em;
+  color: #000000;
+  margin: 0;
+  display: -webkit-box;
+  -webkit-line-clamp: 1;
+  -webkit-box-orient: vertical;
+  white-space: normal;
+  overflow: hidden;
+}
+.wrapper #masterGallerSlider .view-more img {
+  height: 15px;
+}
+
 .site-footer-top {
   background-image: url("../images/footer-top-bg.png");
   background-position: center;
@@ -1181,4 +1430,3 @@ ul {
   justify-content: center;
   margin-right: 30px;
 }/*# sourceMappingURL=style.css.map */
-
