--- a/assets-nsg/css/style.scss
+++ b/assets-nsg/css/style.scss
@@ -40,7 +40,7 @@ ul {
       color: $white;
     }
     @media (max-width: 1440px) {
-      font-size: 0.875em;
+      font-size: 0.75em;
     }
   }
   &-yellow-outline {
@@ -66,6 +66,11 @@ ul {
   letter-spacing: 0px;
   color: $red-light;
   margin: 0;
+  position: relative;
+  img{
+    position: absolute;
+    right: 0
+  }
   @media (max-width: 1440px) {
     font-size: 1.25em;
   }
@@ -98,6 +103,27 @@ ul {
   @media (max-width: 991px) {
     font-size: 0.875em;
   }
+}
+
+.breadcrumb{
+  margin: 0;
+  &-item{
+    a{
+      font-size: 0.875em;
+      color: #212529;
+      text-decoration: none;
+    }
+    font-size: 1em;
+    color: #212529;
+    &.active {
+      font-weight: 600;
+    }
+  }
+  
+}
+
+.bg-grey{
+  background-color: #ECECEC;
 }
 
 .common{
@@ -337,12 +363,46 @@ ul {
     background-color: #ffffff;
     &-brand {
       padding: 0;
-      img {
-        @media (max-width: 1440px) {
+      display: flex;
+      align-items: center;
+      .nsg-logo {
+        @media (max-width: 991.98px) {
           height: 60px;
         }
-        @media (max-width: 767px) {
-          height: 50px;
+      }
+      .logo-text{
+        @media (max-width: 991.98px) {
+          line-height: 1;
+        }
+        img{
+          width: 263px;
+          height: 30px;
+          @media (max-width: 991.98px) {
+            width: 175px;
+            height: auto;
+          }
+        }
+        strong{
+          text-transform: initial;
+          font-size: 70%;
+          color: #ff8a00;
+          display: block;
+          font-weight: normal;
+          @media (max-width: 991.98px) {
+            font-size: 50%;
+            line-height: 1.5;
+          }
+        }
+        span{
+          font-size: 65%;
+          text-transform: capitalize;
+          display: block;
+          color: #f28300;
+          font-weight: 600;
+          @media (max-width: 991.98px) {
+            font-size: 45%;
+            line-height: 1.8;
+          }
         }
       }
     }
@@ -441,7 +501,7 @@ ul {
         color: $red-light;
       }
       @media (max-width: 1440px) {
-        font-size: 0.875em;
+        font-size: 0.75em;
         padding: 0 15px 0 0;
       }
       @media (max-width: 1199.98px) {
@@ -455,6 +515,9 @@ ul {
       &:hover {
         border-color: $black;
         color: $black;
+      }
+      @media (max-width: 1440px) {
+        padding: 10px;
       }
       @media (max-width: 1199.98px) {
         margin-top: 15px;
@@ -651,7 +714,7 @@ ul {
     .owl-next {
       right: 0;
       span {
-        background-image: url("../images/next.svg") !important;
+        background-image: url("../images/next.svg");
       }
     }
   }
@@ -1008,8 +1071,7 @@ ul {
 
 .eliminator {
   &-wrap {
-    background-image: url("../images/dotted-bg.png");
-    @include background-cover;
+    background-color: #f8f8f8;
   }
   &-content {
     .heading-wrap {
@@ -1083,9 +1145,6 @@ ul {
 }
 
 .contact{
-  &-wrap{
-    background-color: #ECECEC;
-  }
   &-info {
     display: flex;
     flex-direction: column;
@@ -1118,11 +1177,6 @@ ul {
   }
 }
 
-.organization{
-  &-wrap{
-    background-color: #ECECEC;
-  }
-}
 .desc-black {
   font-size: 1em;
   line-height: 28px;
@@ -1131,12 +1185,13 @@ ul {
 }
 .master-gallery-wrap{
   .img-wrap {
-    margin: 10px 0;
+    img{
+      border-radius: 4px;
+    }
   }
 }
 .wrapper{
-  background-color: #ECECEC;
-  padding: 70px 0;
+  padding: 20px 0px 70px 0px;
   .link-wrap {
     border: 1px solid #CCCCCC;
     background: #2A2A2A;
@@ -1231,11 +1286,13 @@ ul {
   .link-yellow{
     text-decoration: underline;
   }
-
-  #masterGallerSlider{
+  #masterGallerySlider{
     .img-wrap{
       border: 1px solid #EEEEEE;
       border-radius: 5px;
+      img{
+        border-radius: 0;
+      }
     }
     .title {
       font-size: 0.875em;
@@ -1246,14 +1303,136 @@ ul {
       -webkit-box-orient: vertical;
       white-space: normal;
       overflow: hidden;
+      margin-right: 10px;
     }
     .view-more{
       img {
         height: 15px;
       }
     }
+    .owl-dots{
+      margin-top: 20px;
+    }
   }
 }
+.photogallery-wrap{
+  .photogallery-slider{
+    .img-title {
+      background: #DB2C36;
+      padding: 25px;
+      position: relative;
+      img {
+        position: absolute;
+        right: 20px;
+        width: auto;
+        top: -20px;
+      }
+      p {
+        color: #ffffff;
+        margin: 0;
+        font-size: 1.25em;
+        font-weight: 600;
+        display: -webkit-box;
+        -webkit-line-clamp: 2;
+        -webkit-box-orient: vertical;
+        white-space: normal;
+        overflow: hidden;
+      }
+    }
+    .img-wrap {
+      position: relative;
+      .total-img {
+        position: absolute;
+        top: 0;
+        right: 0;
+        border-radius: 0px 0px 0px 8px;
+        opacity: 0.8;
+        background: #fff;
+        letter-spacing: 0px;
+        color: #000000;
+        font-size: 0.875em;
+        font-weight: 500;
+        padding: 10px 15px;
+      }
+    }
+    .owl-nav{
+      button {
+        @include d-flex-center;
+        position: absolute;
+        top: 40%;
+        border-radius: 50%;
+        width: 35px;
+        height: 35px;
+        border: 1px solid #C2C2C2;
+        background-color: $white;
+        &:hover {
+          background-color: $red-light;
+          span {
+            filter: invert(1);
+          }
+        }
+        span {
+          font-size: 0;
+          background-position: center;
+          background-repeat: no-repeat;
+          background-size: 10px;
+          width: 15px;
+          height: 15px;
+        }
+      }
+      .owl-prev {
+        left: -15px;
+        span{
+          background-image: url(../images/gallery-arrow-prev.svg);
+        }
+      }
+      .owl-next {
+        right: -15px;
+        span{
+          background-image: url(../images/gallery-arrow-next.svg);
+        }
+      }
+    }
+  }
+  .photogallery-tabs{
+    .nav-tabs{
+      border: 1px solid #CCCCCC;
+      border-radius: 60px;
+      justify-content: center;
+      width: max-content;
+      margin: 0 auto 25px;
+      .nav-item{
+        &.show{
+          .nav-link{
+            border: none;
+            background: transparent;
+            color: #CC2832;
+            font-weight: bold;
+          }
+        }
+        .nav-link {
+          border: none;
+          font-size: 1em;
+          color: #000000;
+          border: none;
+          &:focus, &:hover {
+            border: none;
+          }
+          &.active{
+            border: none;
+            background: transparent;
+            color: #CC2832;
+            font-weight: bold;
+          }
+        }
+      }
+      
+    }
+    
+  }
+
+}
+
 
 .site-footer {
   &-top {
@@ -1322,7 +1501,7 @@ ul {
   }
   &-bottom {
     background: #cc2832;
-    padding: 15px 0;
+    padding: 10px 0;
 
     .visitor-heading {
       letter-spacing: 0.28px;
@@ -1331,6 +1510,7 @@ ul {
       margin: 0;
       span {
         font-weight: 600;
+        letter-spacing: 5px;
       }
     }
     .social-links {
@@ -1344,7 +1524,7 @@ ul {
           }
           a {
             @include d-flex-center;
-            margin-right: 30px;
+            margin-right: 10px;
           }
         }
       }
